--- a/assets/pages/buy.html
+++ b/assets/pages/buy.html
@@ -15,11 +15,12 @@
             <ul class="header__ul">
                 <li class="header__li"><a href="./buy.html" class="header__li__a">Comprar</a></li>
                 <li class="header__li"><a href="./card.html" class="header__li__a">Tarjeta</a></li>
+                <li class="header__li"><a href="#" class="header__li__a" id="loginheaderbtn">Iniciar Sesion</a></li>
             </ul>
         </nav>
     </header>
     
-    <main class="buy">
+    <main class="buy" id="main">
         <div class="buy__div" id="container">
         </div>
     </main>
@@ -33,6 +34,7 @@
         
         <a href="mailto:gonzalosolaligue@gmail.com" class="footer__mail">Gonzalo Solaligue @ 2022</a>
     </footer>
+    <script src="../js/login.js"></script>
     <script src="../js/stock.js"></script>
     <script src="../js/buy.js"></script>
 </body>
