Añadidos Operadores Avanzados
Añadidos Operadores avanzados en:
Operador Ternario : linea 88 - login.js | linea 60 - App.js
Desestructuración : linea 18 - home.js | linea 8 - App.js
Spread : linea 53 - card.js

--- a/public/pages/buy.html
+++ b/public/pages/buy.html
@@ -22,8 +22,12 @@
     </header>
     
     <main class="buy" id="main">
-        <div class="buy__div" id="container">
-        </div>
+        <section>
+            <article>
+                <div class="buy__div" id="container">
+                </div>
+            </article>
+        </section>
         
         <section class="cmodal">
             <div class="cmodal__container">
