--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
         <section>
             <article>
                 <div class="hero__div">
-                    <h2 class="hero__div__h2" id="nametoshow">Bienvenido a GlasStore</h2>
-                    <p class="hero__div__p">
+                    <h2 class="hero__div__title" id="nametoshow">Bienvenido a GlasStore</h2>
+                    <p class="hero__div__description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, temporibus officiis autem,<br>
                         debitis in beatae a ab veritatis architecto aliquid deserunt commodi ex at natus neque <br>
                         fugit quis eligendi inventore.
                     </p>
+                    <h3 class="ad__title">Productos Destacados</h3>
+                    <div class="ad__div" id="container">
+                    </div>
                 </div>
             </article>
         </section>
