--- a/public/pages/buy.html
+++ b/public/pages/buy.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="../css/style.css">
     <title>GlasStore - Gonzalo Solaligue</title>
 </head>
 <body>
-    <header id="header">
+    <header id="header" class="animate__animated animate__fadeIn">
         <a href="../../index.html" class="header__logo">GlasStore</a>
         <nav class="header__nav">
             <ul class="header__ul">
@@ -22,7 +26,7 @@
     </header>
     
     <main class="buy" id="main">
-        <section>
+        <section class="animate__animated animate__fadeIn">
             <article>
                 <div class="buy__div" id="container">
                 </div>
@@ -41,7 +45,7 @@
         </section>
     </main>
     
-    <footer class="footer" id="footer">
+    <footer class="footer animate__animated animate__fadeIn" id="footer">
         <ul class="footer__ul">
             <li><a href="../../index.html" class="footer__a">Inicio</a></li>
             <li><a href="./buy.html" class="footer__a">Comprar</a></li>
