--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./public/images/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="./public/css/style.css">
     <title>GlasStore - Gonzalo Solaligue</title>
 </head>
 <body>
-    <header id="header">
+    <header id="header" class="animate__animated animate__fadeIn animate__delay-1s">
         <a href="./index.html" class="header__logo">GlasStore</a>
         <nav class="header__nav">
             <ul class="header__ul">
@@ -22,7 +26,7 @@
     </header>
     
     <main class="hero" id="main">
-        <section>
+        <section class="animate__animated animate__fadeIn animate__delay-2s">
             <article>
                 <div class="hero__div">
                     <h2 class="hero__div__title" id="nametoshow">Bienvenido a GlasStore</h2>
@@ -50,7 +54,7 @@
         </section>
     </main>
     
-    <footer class="footer" id="footer">
+    <footer class="footer animate__animated animate__fadeIn animate__delay-1s" id="footer">
         <ul class="footer__ul">
             <li><a href="./index.html" class="footer__a">Inicio</a></li>
             <li><a href="./public/pages/buy.html" class="footer__a">Comprar</a></li>
