--- a/public/pages/card.html
+++ b/public/pages/card.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="../css/style.css">
     <title>GlasStore - Gonzalo Solaligue</title>
 </head>
 <body>
     <header id="header">
-        <a href="../../index.html" class="header__logo">GlasStore</a>
+        <a href="../../index.html" class="header__logo animate__animated animate__fadeIn">GlasStore</a>
         <nav class="header__nav">
             <ul class="header__ul">
                 <li class="header__li"><a href="./buy.html" class="header__li__a">Comprar</a></li>
@@ -21,7 +25,7 @@
         </nav>
     </header>
     
-    <main class="card" id="main">
+    <main class="card animate__animated animate__fadeIn" id="main">
         <section>
             <div class="card__div" id="card">
                 <div class="card__inside">
@@ -46,7 +50,7 @@
         </section>
     </main>
     
-    <footer class="footer" id="footer">
+    <footer class="footer animate__animated animate__fadeIn" id="footer">
         <ul class="footer__ul">
             <li><a href="../../index.html" class="footer__a">Inicio</a></li>
             <li><a href="./buy.html" class="footer__a">Comprar</a></li>
