--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     
                 </div>
                 <p class="cmodal__desc" id="carttotaltxt">Tu carrito esta vacio!</p>
+                <button class="cmodal__button__buy" id="cartbuybtn">Comprar!</button>
                 <button class="cmodal__button" id="cartclosebtn">Cerrar</button>
             </div>
         </section>
@@ -70,6 +71,7 @@
     <script src="./src/components/cart/cartActions.js" type="module"></script>
     <script src="./src/components/cart/cartUpdater.js" type="module"></script>
     <script src="./src/components/cart/storage.js" type="module"></script>
+    <script src="./src/components/products/obtainProducts.js" type="module"></script>
     <script src="./src/controllers/cartController.js" type="module"></script>
 </body>
 </html>
