--- a/public/pages/buy.html
+++ b/public/pages/buy.html
@@ -40,6 +40,7 @@
                     
                 </div>
                 <p class="cmodal__desc" id="carttotaltxt">Tu carrito esta vacio!</p>
+                <button class="cmodal__button__buy" id="cartbuybtn">Comprar!</button>
                 <button class="cmodal__button" id="cartclosebtn">Cerrar</button>
             </div>
         </section>
@@ -56,12 +57,12 @@
     </footer>
     
     <script src="../../src/components/login/login.js" type="module"></script>
-    <script src="../../src/components/products/stock.js" type="module"></script>
-    <script src="../../src/App.js" type="module"></script>
     <script src="../../src/components/cart/cartModal.js" type="module"></script>
     <script src="../../src/components/cart/cartActions.js" type="module"></script>
     <script src="../../src/components/cart/cartUpdater.js" type="module"></script>
     <script src="../../src/components/cart/storage.js" type="module"></script>
+    <script src="../../src/components/products/obtainProducts.js" type="module"></script>
+    <script src="../../src/App.js" type="module"></script>
     <script src="../../src/controllers/buyController.js" type="module"></script>
 </body>
 </html>
