--- a/public/pages/card.html
+++ b/public/pages/card.html
@@ -45,6 +45,7 @@
                     
                 </div>
                 <p class="cmodal__desc" id="carttotaltxt">Tu carrito esta vacio!</p>
+                <button class="cmodal__button__buy" id="cartbuybtn">Comprar!</button>
                 <button class="cmodal__button" id="cartclosebtn">Cerrar</button>
             </div>
         </section>
