Retoques Visuales y añadido Sass
Overhaul visual y sass añadido al proyecto

--- a/public/pages/buy.html
+++ b/public/pages/buy.html
@@ -13,7 +13,7 @@
     <title>GlasStore - Gonzalo Solaligue</title>
 </head>
 <body>
-    <header id="header" class="animate__animated animate__fadeIn">
+    <header id="header" class="animate__animated animate__fadeIn animate__delay-1s header">
         <a href="../../index.html" class="header__logo">GlasStore</a>
         <nav class="header__nav">
             <ul class="header__ul">
