--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>GlasStore - Gonzalo Solaligue</title>
 </head>
 <body>
-    <header id="header" class="animate__animated animate__fadeIn animate__delay-1s">
+    <header id="header" class="animate__animated animate__fadeIn animate__delay-1s header">
         <a href="./index.html" class="header__logo">GlasStore</a>
         <nav class="header__nav">
             <ul class="header__ul">
@@ -35,9 +35,11 @@
                         debitis in beatae a ab veritatis architecto aliquid deserunt commodi ex at natus neque <br>
                         fugit quis eligendi inventore.
                     </p>
-                    <h3 class="ad__title">Productos Destacados</h3>
-                    <div class="ad__div" id="container">
-                    </div>
+                </div>
+                
+                <h3 class="ad__title">Productos Destacados</h3>
+                
+                <div class="ad__div" id="container">
                 </div>
             </article>
         </section>
